# cryptossets-django

./: README.md  pyproject.toml
cryptossets/: db.sqlite3  main.py  manage.py
cryptossets.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cryptossets/account/: admin.py  enums.py  forms.py  functions.py  models.py  views.py
cryptossets/account/migrations/: 0001_initial.py  0002_remove_info_unique_user_exchange_and_more.py  0003_alter_info_coinex_access_id_and_more.py
cryptossets/authentication/: views.py
cryptossets/mecrypto/: asgi.py  settings.py  urls.py  wsgi.py
cryptossets/templates/: exchanges.html  overview.html  profile.html
cryptossets/templates/registration/: login.html  signup.html
